--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
     <title></title>
+    <link type="text/css" href="styles/style.css" rel="stylesheet">
 </head>
 <body>
-   <h1>Hallo world</h1>
+   <div class="logo"><img src="images/logo_small.jpg" /> </div>
 </body>
 </html>
