Новая презентация. Начало

--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html>
 <head>
     <title></title>
-    <link type="text/css" href="styles/style.css" rel="stylesheet">
+    <link href="styles/style.css" rel="stylesheet" type="text/css">
+    <link href="styles/onepage-scroll.css" rel="stylesheet" type="text/css">
+    <link href="styles/glide.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-   <div class="logo"><img src="images/logo_small.jpg" /> </div>
+
+
+<div class="logo">
+    <img src="images/logo_small.jpg"/>
+</div>
+
+<script type="text/javascript" src="scripts/script.js"></script>
 </body>
 </html>
