--- a/talks/rggu/index.html
+++ b/talks/rggu/index.html
@@ -20,7 +20,8 @@
 
             <div style="position: absolute; z-index: 1000; top: 200px; left: 100px; color: black">
 
-                <h2>New Media Art</h2>
+                <h2>New Media Art</h2> & 
+                <h2>Генеративный дизайн</h2>
                 <br><br><br><br><br>
                 <span style="background-color: #ffffff"> Михаил Дунаев 2013 </span>
             </div>
@@ -29,11 +30,17 @@
     </section>
 
     <section>
-        <div class="page">
+    	<div class="page">
             <img src="images/slide2.png"/>
         </div>
     </section>
+    <section>
 
+            <iframe src="http://player.vimeo.com/video/17336025?title=1&amp;byline=0&amp;portrait=0&amp;color=ffffff"
+                    width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen
+                    allowfullscreen></iframe>
+
+    </section>
     <section>
         <div class="page">
             <img src="images/slide3.png"/>
@@ -47,15 +54,28 @@
     </section>
 
     <section>
-        <div class="page">
-            <a href="http://www.generative-gestaltung.de">generative gestaltung</a> <br><br><br>
 
-            <iframe src="http://player.vimeo.com/video/17336025?title=0&amp;byline=0&amp;portrait=0&amp;color=ffffff"
-                    width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen
+            <iframe src="http://player.vimeo.com/video/36466564?title=1&amp;byline=0&amp;portrait=0&amp;color=ffffff"
+                    width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen
                     allowfullscreen></iframe>
-        </div>
+
+    </section>
+    <section>
+
+            <iframe src="http://player.vimeo.com/video/54882144?title=1&amp;byline=0&amp;portrait=0&amp;color=ffffff"
+                    width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen
+                    allowfullscreen></iframe>
+
     </section>
 
+    <section>
+
+            <iframe src="http://player.vimeo.com/video/69834869?title=1&amp;byline=0&amp;portrait=0&amp;color=ffffff"
+                    width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen
+                    allowfullscreen></iframe>
+
+    </section>
+        
     <section>
         <br><br><br><br><br><br><br>
 
@@ -112,38 +132,34 @@
 
     <section>
         <div class="page">
-            <a href="http://processing.org"> <img src="images/processing.png">    </a>
+            <a target="_blank"  href="http://processing.org"> <img src="images/processing.png">    </a>
         </div>
     </section>
 
     <section>
 
-<div class="page">
-    Пример кода  <br><br><br>
-    <iframe width="800" height="450" src="http://www.youtube.com/embed/hD8PGGly19w?rel=0" frameborder="0" allowfullscreen></iframe>
-</div>
+    <iframe width="100%" height="100%" src="http://www.youtube.com/embed/hD8PGGly19w?rel=0" frameborder="0" allowfullscreen></iframe>
+
 </section>
 
 <section>
-    <div class="page">
-        MIT Media Lab Identity <br><br><br>
-        <iframe src="http://player.vimeo.com/video/20250134?title=0&amp;byline=0&amp;portrait=0" width="800"
-                height="453" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-    </div>
+  
+        <iframe src="http://player.vimeo.com/video/20250134?title=1&amp;byline=0&amp;portrait=0" width="100%"
+                height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    
 </section>
 
 <section>
-    <div class="page">
-        Max Planck Research Networks Prototype <br><br><br>
-        <iframe src="http://player.vimeo.com/video/28773527?title=0&amp;byline=0&amp;portrait=0&amp;color=ffffff"
-                width="800" height="485" frameborder="0" webkitallowfullscreen mozallowfullscreen
+
+        <iframe src="http://player.vimeo.com/video/28773527?title=1&amp;byline=0&amp;portrait=0&amp;color=ffffff"
+                width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen
                 allowfullscreen></iframe>
-    </div>
+
 </section>
 
 <section>
     <div class="page">
-        <a href="http://d3js.org"><img src="images/d3.png"></a>
+        <a target="_blank"  href="http://d3js.org"><img src="images/d3.png"></a>
     </div>
 </section>
 
@@ -155,7 +171,7 @@
 
 <section>
     <div class="page">
-        <a href="http://vvvv.org"><img src="images/vvvv.png"></a>
+        <a target="_blank"  href="http://vvvv.org"><img src="images/vvvv.png"></a>
     </div>
 </section>
 
@@ -182,7 +198,7 @@
 
     <section>
         <div class="page">
-            <a href="http://arduino.cc"><img src="images/arduino.png"></a>
+            <a target="_blank"  href="http://arduino.cc"><img src="images/arduino.png"></a>
         </div>
     </section>
 
