--- a/talks/rggu/index.html
+++ b/talks/rggu/index.html
@@ -55,7 +55,7 @@
 
     <section>
 
-            <iframe src="http://player.vimeo.com/video/36466564?title=1&amp;byline=0&amp;portrait=0&amp;color=ffffff"
+            <iframe src="http://player.vimeo.com/video/74124094?title=1&amp;byline=0&amp;portrait=0&amp;color=ffffff"
                     width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen
                     allowfullscreen></iframe>
 
@@ -75,7 +75,7 @@
                     allowfullscreen></iframe>
 
     </section>
-        
+
     <section>
         <br><br><br><br><br><br><br>
 
@@ -164,9 +164,9 @@
 </section>
 
 <section>
-    <div class="page">
-        <iframe width="800" height="600" scrolling="no" src="http://bl.ocks.org/mbostock/raw/1256572/"  frameborder="0" allowfullscreen></iframe>
-    </div>
+<div class="page">
+        <iframe width="100%" height="100%" scrolling="no" src="http://bl.ocks.org/mbostock/raw/1256572/"  frameborder="0" allowfullscreen></iframe>
+</div>
 </section>
 
 <section>
@@ -176,24 +176,21 @@
 </section>
 
 <section>
-    <div class="page">
-        Пример интерфейса  <br><br><br>
-        <iframe width="800" height="450" src="http://www.youtube.com/embed/MyzyJIgCoiM?rel=0" frameborder="0" allowfullscreen></iframe>
-    </div>
+
+        <iframe width="100%" height="100%" src="http://www.youtube.com/embed/MyzyJIgCoiM?rel=0" frameborder="0" allowfullscreen></iframe>
+
 </section>
 
 <section>
-    <div class="page">
-        Chromophore  <br><br><br>
-        <iframe src="http://player.vimeo.com/video/70807939?title=0&amp;byline=0&amp;portrait=0&amp;color=ff0179" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-    </div>
+
+        <iframe src="http://player.vimeo.com/video/70807939?title=1&amp;byline=0&amp;portrait=0&amp;color=ff0179" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
 </section>
 
 <section>
-    <div class="page">
-        Cyclotone  <br><br><br>
-        <iframe src="http://player.vimeo.com/video/58144326?title=0&amp;byline=0&amp;portrait=0&amp;color=ffffff" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-    </div>
+
+        <iframe src="http://player.vimeo.com/video/58144326?title=1&amp;byline=0&amp;portrait=0&amp;color=ffffff" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
 </section>
 
     <section>
@@ -203,14 +200,20 @@
     </section>
 
 <section>
-    <div class="page">
-        Arduino + vvvv  <br><br><br>
-        <iframe src="http://player.vimeo.com/video/69172966?title=0&amp;byline=0&amp;portrait=0" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>  </div>
+        <iframe src="http://player.vimeo.com/video/69172966?title=0&amp;byline=0&amp;portrait=0" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
 </section>
 
 <section>
     <div class="page">
-        http://mdunaev.github.io/talks/rggu/
+    	<h2>Полезные ссылки</h2>
+    	<a target="_blank" href='http://www.creativeapplications.net'>CreativeApplications.Net</a><br>
+    	<a target="_blank" href='http://thecreatorsproject.vice.com/video'> thecreatorsproject</a><br>
+    	<a target="_blank" href='http://audiovisualacademy.com/avin/'> Курс по новым медиа</a><br>
+    	<a target="_blank" href='http://resonate.io/2014/'>Фкстиваль Resonate</a><br>
+    </div>
+
+        <h2>Эта презентация:</h2> 
+        <a target="_blank" href='http://mdunaev.github.io/talks/rggu/'> http://mdunaev.github.io/talks/rggu/ </a>
     </div>
 </section>
 
