--- a/talks/rggu/index.html
+++ b/talks/rggu/index.html
@@ -204,15 +204,16 @@
 </section>
 
 <section>
-    <div class="page">
-    	<h2>Полезные ссылки</h2>
-    	<a target="_blank" href='http://www.creativeapplications.net'>CreativeApplications.Net</a><br>
+    <div class="page" style="font-face: Arial">
+    	<h2>Полезные ссылки</h2><br>
+    	<a  target="_blank" href='http://www.creativeapplications.net'>CreativeApplications.Net</a><br>
     	<a target="_blank" href='http://thecreatorsproject.vice.com/video'> thecreatorsproject</a><br>
-    	<a target="_blank" href='http://audiovisualacademy.com/avin/'> Курс по новым медиа</a><br>
-    	<a target="_blank" href='http://resonate.io/2014/'>Фкстиваль Resonate</a><br>
-    </div>
+    	<a target="_blank" href='http://audiovisualacademy.com/avin/'> audiovisualacademy </a><br>
+    	<a target="_blank" href='http://resonate.io/2014/'>Resonate</a><br>
 
-        <h2>Эта презентация:</h2> 
+<br><br>
+
+        <h2>Эта презентация:</h2><br> 
         <a target="_blank" href='http://mdunaev.github.io/talks/rggu/'> http://mdunaev.github.io/talks/rggu/ </a>
     </div>
 </section>
