--- a/talks/mggu/index.html
+++ b/talks/mggu/index.html
@@ -214,7 +214,7 @@
 <br><br>
 
         <h2>Эта презентация:</h2><br> 
-        <a target="_blank" href='http://mdunaev.github.io/talks/rggu/'> http://mdunaev.github.io/talks/rggu/ </a>
+        <a target="_blank" href='http://mdunaev.github.io/talks/mggu/'> http://mdunaev.github.io/talks/mggu/ </a>
     </div>
 </section>
 
