--- a/lab/lab.html
+++ b/lab/lab.html
@@ -1,30 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>L. a. b.</title>
-    <link href="../../bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <script src="http://code.jquery.com/jquery-1.8.1.min.js"></script>
-    <script src="../../bootstrap/js/bootstrap.min.js"></script>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-
-    {% block script_style %}
-
-    {% endblock %}
-
+    <title></title>
+    <link href="../styles/style.css" rel="stylesheet" type="text/css">
+    <link href="../styles/onepage-scroll.css" rel="stylesheet" type="text/css">
+    <link href="../styles/glide.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
-<div id="wrap">
-    <div class="container">
-        {% block container %}
-        {% endblock %}
-    </div>
-</div>
 
-<div id="footer">
-    {% block footer %}
-    {% endblock %}
+<div class="logo">
+    <img src="../images/logo_small.jpg"/>
 </div>
 
 </body>
