--- a/talks/bhsad_inf_2014/index.html
+++ b/talks/bhsad_inf_2014/index.html
@@ -155,9 +155,9 @@
 </div>   </div>
 
 <div class='slide'>  <div class="bg2"></div>  <div class="content" style="margin-top: -180px">
-   загрузка данных из api
+   загрузка данных из api      <br>
     <img src="d3-3.png">
-    <br>
+
 </div> </div>
 
 <div class='slide'>  <div class="bg2"></div>  <div class="content">
