--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="short">
             1983г.р. Опыт работы: дизайнер - 4 года, веб-программист - 5 лет.<br>
             Используемые технологии:<br>
-            CoffeScript/JavaScript, Stylus/CSS, JQuery+Backbone, D3JS, Adobe CC.<br>
+            CoffeScript/JavaScript, Stylus/CSS, JQuery, Angular, d3js, Adobe CC.<br>
             В меньшей степени:<br>
             Python, GoogleAppEngine, Swift.<br>
         </div>
@@ -56,7 +56,7 @@
             Из css-препроцессоров предпочитаю Stylus. Пакетный менеджер - Bower и Grunt в качестве инструмента для
             сборки. IDE - Intellij IDEA.<br>
             <br>
-            В качестве основы для веб-проектов чаще всего использую фреймворки JQuery+Backbone, либо d3.js для
+            В качестве основы для веб-проектов чаще всего использую фреймворки Angular, JQuery, либо d3.js для
             визуализации данных.<br>
             <br>
             Есть опыт в написании back-end на Python+GoogleAppEngine.<br>
