--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <title>Михаил Дунаев. JavaScript-программист.</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,400italic&subset=latin,cyrillic' rel='stylesheet'
+    <link href='http://fonts.googleapis.com/css?family=PT+Serif:400,400italic&subset=latin,cyrillic' rel='stylesheet'
           type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=PT+Serif+Caption&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
     <link href="bower_components/normalize-css/normalize.css" rel="stylesheet" type="text/css">
     <link href="styles/style.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="styles/tipped.css"/>
@@ -16,22 +17,26 @@
             width="2000px" height="2000px"></canvas>
 </div>
 
+
+<div class="top_header">Михаил Дунаев. Frontend-программист.</div>
+
 <div class="content">
     <div class="first_slide">
         <div class="self_photo">
             <div class="photo"></div>
             <div class="sequence" style="display: none"></div>
         </div>
-        <div class="header">
-            <div class="hallo white">Привет!</div>
-            <div class="white">
-            Меня зовут Михаил Дунаев, я программист-фрилансер.<br>
-            Моя основная специализация - это <span class="popup" title="Разработка интерфейса,<br> html/css верстка">front-end</span>,
-            <span class="popup" title="Web-приложения со сложной логикой">rich internet application</span>,
-            <span class="popup" title="Визуализация данных, инфографика">data visualization</span>.
-            </div>
+    </div>
+
+    <div class="header">
+        <div class="white">
+        Привет! Меня зовут Михаил Дунаев, я программист-фрилансер.<br>
+        Моя основная специализация - это <span class="popup" title="Разработка интерфейса,<br> html/css верстка">front-end</span>,
+        <span class="popup" title="Web-приложения со сложной логикой">rich internet application</span>,
+        <span class="popup" title="Визуализация данных, инфографика">data visualization</span>.
         </div>
     </div>
+
     <div class="about">
         <div class="menu white">
             Резюме
@@ -40,14 +45,13 @@
             <div class="long-btn">полное</div>
         </div>
         <div class="short">
-            1983г.р. Опыт работы: дизайнер - 4 года, веб-программист - 5 лет.<br>
+            Родился в 1983 году. Опыт работы: дизайнер - 4 года, веб-программист - 5 лет.<br>
             Используемые технологии:<br>
             CoffeScript/JavaScript, Stylus/CSS, JQuery, Angular, d3js, Adobe CC.<br>
             В меньшей степени:<br>
             Python, GoogleAppEngine, Swift.<br>
         </div>
         <div class="long hidden">
-            <h2>О себе:</h2>
             Родился в 1983 году в небольшом <span class="popup" title="г.Балаково, Саратовской обл.">городе</span> на Волге, где закончил школу и учился в медицинском училище и
             политехническом институте.<br>
             C 2006 года живу и работаю в Москве.<br>
@@ -94,7 +98,8 @@
             Переодически преподаю в Британской Высшей Школе Дизайна программирование на Processing на курсе "Дизайн в
             интерактивной среде".<br>
             <br>
-            С октября 2014 года занимаюсь удаленной работой.<br>
+            В октябре 2014 оставил работу в Студии.<br>
+            На данный момент занимаюсь личными проектами и фрилансом.
             <br>
         </div>
     </div>
