--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <link href="bower_components/normalize-css/normalize.css" rel="stylesheet" type="text/css">
     <link href="styles/style.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="styles/tipped.css"/>
+
+
+    <meta property="og:title" content="Михаил Дунаев. Fontend-программист."/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="http://mdunaev.github.io/"/>
+    <meta property="og:image" content="http://mdunaev.github.io/images/fb-logo.jpg"/>
+
+
 </head>
 <body>
 
