--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles/tipped.css"/>
 
 
-    <meta property="og:title" content="Михаил Дунаев. Fontend-программист."/>
+    <meta property="og:title" content="Михаил Дунаев. Frontend-программист."/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="http://mdunaev.github.io/"/>
     <meta property="og:image" content="http://mdunaev.github.io/images/fb-logo.jpg"/>
