--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:title" content="Михаил Дунаев. Frontend-программист."/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="http://mdunaev.github.io/"/>
-    <meta property="og:image" content="http://mdunaev.github.io/images/fb-logo.jpg"/>
+    <meta property="og:image" content="http://mdunaev.github.io/images/fb-logo2.jpg"/>
 
 
 </head>
