--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
         <h2>Портфолио:</h2>
         <div class="p-header"><a  target="_blank">Интерактивные инсталляции для Future Media Forum</a></div>
         <div class="images"></div>
-        <div class="p-desc"></div>
-        <div class="p-link"><a href="" target="_blank"><img src="images/projects/link.png" style="position: relative"></a></div>
+        <div class="p-desc"><div class="p-cont"><a target="_blank" class="cont-a"></a> </div></div>
+
         <div class="right_btn"></div>
     </div>
 
