--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="header">
         <div class="white">
             Привет! Меня зовут Михаил Дунаев, я программист-фрилансер.<br>
-            Моя основная специализация - это <span class="popup" title="Разработка интерфейса,<br> html/css верстка">front-end</span>,
+            Моя основная специализация - это <span class="popup" title="Разработка интерфейса, html/css верстка">front-end</span>,
             <span class="popup" title="Web-приложения со сложной логикой">rich internet application</span>,
             <span class="popup" title="Визуализация данных, инфографика">data visualization</span>.
         </div>
