--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
             <h2>Используемые технологии:</h2>
 
             Основной используемый язык программирования -
-            <span class="popup" title="Язык программирования, транслируемый в JavaScript. CoffeeScript добавляет синтаксический сахар в духе Ruby, Python, Haskell и Erlang для того, чтобы улучшить читаемость кода и уменьшить его размер.">CoffeeScript</span>
-            ,либо чистый JavaScript при необходимости.<br>
+            <span class="popup" title="Язык программирования, транслируемый в JavaScript. CoffeeScript добавляет синтаксический сахар в духе Ruby, Python, Haskell и Erlang для того, чтобы улучшить читаемость кода и уменьшить его размер.">
+                CoffeeScript</span>, либо чистый JavaScript при необходимости.<br>
             Из css-препроцессоров предпочитаю Stylus. Пакетный менеджер - Bower и Grunt в качестве инструмента для
             сборки. IDE - Intellij IDEA.
             <p>
