--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="short">
             Родился в 1983 году. Опыт работы: дизайнер - 4 года, веб-программист - 5 лет.<br>
             Используемые технологии:<br>
-            CoffeScript/JavaScript, Stylus/CSS, JQuery, Angular, d3js, Adobe CC.<br>
+            CoffeeScript/JavaScript, Stylus/CSS, JQuery, Angular, d3js, Adobe CC.<br>
             В меньшей степени:<br>
             Python, GoogleAppEngine, Swift.<br>
         </div>
