change processing to p5

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 }(document, 'script', 'facebook-jssdk'));</script>
 
 
-<div class="bg">
-    <canvas id="bg" data-processing-sources="scripts/processing-bg/bg/web-export/bg.pde"
-            width="2000px" height="2000px"></canvas>
-</div>
+<!--<div class="bg">-->
+    <!--&lt;!&ndash;<canvas id="bg" data-processing-sources="scripts/processing-bg/bg/web-export/bg.pde"&ndash;&gt;-->
+            <!--&lt;!&ndash;width="2000px" height="2000px"></canvas>&ndash;&gt;-->
+<!--</div>-->
 
 
 <div class="top_header">Михаил Дунаев. Frontend-программист.
@@ -180,21 +180,27 @@
             </span>
 
         </div>
-        <div class="right"><div class="fb-like" data-href="http://mdunaev.github.io/" data-layout="button_count" data-action="recommend" data-show-faces="true" data-share="true"></div></div>
+        <div class="right">
+
+            <div class="fb-like" data-href="http://mdunaev.github.io/" data-layout="standard" data-action="recommend" data-show-faces="true" data-share="true"></div>
+
+        </div>
     </div>
 </div>
 </div>
 
 <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
 <script type="text/javascript" src="scripts/tipped/tipped.js"></script>
-<script type="text/javascript" src="scripts/processing-bg/bg/web-export/processing.js"></script>
-<script type="text/javascript">
-    function getProcessingSketchId() {
-        return 'bg';
-    }
-</script>
+<!--<script type="text/javascript" src="scripts/processing-bg/bg/web-export/processing.js"></script>-->
+<!--<script type="text/javascript">-->
+    <!--function getProcessingSketchId() {-->
+        <!--return 'bg';-->
+    <!--}-->
+<!--</script>-->
 <script type="text/javascript" src="scripts/jquery.transit.min.js"></script>
 <script type="text/javascript" src="scripts/data.js"></script>
 <script type="text/javascript" src="scripts/script.js"></script>
+<script type="text/javascript" src="scripts/p5script.js"></script>
+<script type="text/javascript" src="scripts/p5.min.js"></script>
 </body>
 </html>
