--- a/outside/oopt/source/index.html
+++ b/outside/oopt/source/index.html
@@ -31,6 +31,32 @@
     <div class="web">Web</div>
 </div>
 
+<div class="popup">
+    <h2>Area name</h2>
+    <div class="info">
+        <iframe src="info.html" frameborder="0" scrolling="no" ></iframe>
+    </div>
+    <div class="video"><iframe src="//player.vimeo.com/video/18548988" width="800" height="525" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> </div>
+    <div class="photo">
+
+        <div class="photo_container">
+                <img src="images/temp/1.jpg">
+                <img src="images/temp/2.jpg">
+                <img src="images/temp/3.jpg">
+                <img src="images/temp/4.jpg">
+                <img src="images/temp/5.jpg">
+        </div>
+
+        <div class="photos_left"><img src="images/img-left.png"> </div>
+        <div class="photos_right"><img src="images/img-right.png"> </div>
+
+    </div>
+    <div class="web">
+        <iframe src="https://en.wikipedia.org/wiki/Nature_reserve" sandbox="deny-top-navigation" frameborder="0"></iframe>
+    </div>
+</div>
+
+
 <script src="bower_components/jquery/dist/jquery.js"></script>
 <script src="bower_components/jquery.transit/jquery.transit.js"></script>
 <script src="Cesium/Build/Cesium/Cesium.js"></script>
