--- a/outside/oopt/source/index.html
+++ b/outside/oopt/source/index.html
@@ -24,11 +24,13 @@
     <div class="map_selector_fader"></div>
 </div>
 
-<div class="popup_menu" style="display: none">
+<div class="popup_menu" style="bottom: -30%">
     <div class="info">Info</div>
     <div class="video">Video</div>
     <div class="photo">Photo</div>
     <div class="web">Web</div>
+
+    <div class="menu_op_name">Hallo</div>
 </div>
 
 <div class="popup" style="display: none">
@@ -54,6 +56,8 @@
     <div class="web">
         <iframe src="https://en.wikipedia.org/wiki/Nature_reserve" sandbox="deny-top-navigation" frameborder="0"></iframe>
     </div>
+
+    <img src="images/close.png" class="close_popup">
 </div>
 
 
