--- a/outside/oopt/source/index.html
+++ b/outside/oopt/source/index.html
@@ -36,7 +36,7 @@
 <div class="popup" style="display: none">
     <h2>Area name</h2>
     <div class="info">
-        <iframe src="info.html" frameborder="0" scrolling="no" ></iframe>
+        <iframe src="info.html" frameborder="0"></iframe>
     </div>
     <div class="video"><iframe src="//player.vimeo.com/video/18548988" width="800" height="525" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> </div>
     <div class="photo">
