--- a/outside/oopt/source/index.html
+++ b/outside/oopt/source/index.html
@@ -38,7 +38,9 @@
     <div class="info">
         <iframe src="info.html" frameborder="0"></iframe>
     </div>
-    <div class="video"><iframe src="//player.vimeo.com/video/18548988" width="800" height="525" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> </div>
+    <div class="video">
+        <video src="data/1008/video/1.mp4" controls  preload="auto" loop></video>
+    </div>
     <div class="photo">
 
         <div class="photo_container">
