--- a/outside/oopt/source/index.html
+++ b/outside/oopt/source/index.html
@@ -39,7 +39,7 @@
         <iframe src="info.html" frameborder="0"></iframe>
     </div>
     <div class="video">
-        <video src="data/1008/video/1.mp4" controls  preload="auto" loop></video>
+        <video src="data/1008/video/1.mp4" controls  preload="auto"></video>
     </div>
     <div class="photo">
 
