--- a/outside/floors/index.html
+++ b/outside/floors/index.html
@@ -15,7 +15,7 @@
 
         .floor {
             width: 3000px;
-            height: 1000px;
+            height: 2000px;
             overflow: hidden;
             margin-left: -1500px;
         }
@@ -38,7 +38,7 @@
 
 <div class="content">
     <div class="floor floor9">
-        <iframe src="header.html" frameBorder="0" scrolling="no"></iframe>
+        <iframe src="header.html" style="background-color: #000000" frameBorder="0" scrolling="no"></iframe>
     </div>
 
     <div class="floor floor8" style="background-color: #6666cc">
