--- a/outside/floors/index.html
+++ b/outside/floors/index.html
@@ -11,6 +11,8 @@
             padding: 0;
             height: 100%;
             overflow: hidden;
+            font-size: 17px;
+            font-family: "DIN Round Medium";
         }
 
         .floor {
@@ -18,6 +20,7 @@
             height: 2000px;
             overflow: hidden;
             margin-left: -1500px;
+            position: relative;
         }
 
         iframe {
@@ -30,6 +33,58 @@
             margin-left: 50%;
             position: fixed;
         }
+
+        @font-face {
+            font-family: 'DIN Round Regular'; /*a name to be used later*/
+            src: url('fonts/FF%20DIN%20Round%20Pro-Regular.otf'); /*URL to font*/
+        }
+
+        @font-face {
+            font-family: 'DIN Round Medium'; /*a name to be used later*/
+            src: url('fonts/FF%20DIN%20Round%20Pro-Medium.OTF'); /*URL to font*/
+        }
+
+        @font-face {
+            font-family: 'DIN Round Light'; /*a name to be used later*/
+            src: url('fonts/FF%20DIN%20Round%20Pro-Light.OTF'); /*URL to font*/
+        }
+
+        @font-face {
+            font-family: 'DIN Round Bold'; /*a name to be used later*/
+            src: url('fonts/FF%20DIN%20Round%20Pro-Bold.OTF'); /*URL to font*/
+        }
+
+        @font-face {
+            font-family: 'DIN Round Black'; /*a name to be used later*/
+            src: url('fonts/FF%20DIN%20Round%20Pro-Black.OTF'); /*URL to font*/
+        }
+
+        h1{
+            font-family: "DIN Round Black";
+            font-size: 44px;
+        }
+
+        .header_header{
+            color: white;
+            position: absolute;
+            bottom: 300px;
+            left: 1150px;
+            width: 700px;
+            height: 200px;
+            line-height: 54px;
+            text-align: center;
+        }
+
+        .sub_header_header{
+            color: white;
+            position: absolute;
+            bottom: 120px;
+            left: 1150px;
+            width: 700px;
+            height: 200px;
+            text-align: center;
+        }
+
     </style>
 
 </head>
@@ -39,6 +94,12 @@
 <div class="content">
     <div class="floor floor9">
         <iframe src="header.html" style="background-color: #000000" frameBorder="0" scrolling="no"></iframe>
+
+        <div class="header_header"><h1>"КРУГИ АДА" НАЧИНАЮЩЕГО<br>
+            ПРЕДПРИНИМАТЕЛЯ</h1></div>
+        <div class="sub_header_header">Многие начинающие бизнесмены совершают одни и те же ошибки, <br>
+            которые могут привести даже к банкротству компании. Наш герой <br>
+            прошел по "всем кругам ада" начинающего предпринимателя.</div>
     </div>
 
     <div class="floor floor8" style="background-color: #6666cc">
